<resources>
    <string name="ime_name" translatable="false">Terminal++ Keyboard</string>
    <string name="word_separators" translatable="false">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="label_go_key" translatable="false">Go</string>
    <string name="label_next_key" translatable="false">Next</string>
    <string name="label_send_key" translatable="false">Send</string>
    <string name="application_terminal" translatable="false">Terminal IDE</string>
    <string name="preferences" translatable="false">Preferences</string>
    <string name="new_window" translatable="false">New window</string>
    <string name="close_window" translatable="false">Close window</string>
    <string name="window_list" translatable="false">Windows</string>
    <string name="prev_window" translatable="false">Prev window</string>
    <string name="next_window" translatable="false">Next window</string>
    <string name="reset" translatable="false">Reset term</string>
    <string name="send_email" translatable="false">Email to</string>
    <string name="special_keys" translatable="false">Special keys</string>
    <string name="toggle_soft_keyboard" translatable="false">Toggle soft keyboard</string>
    <string name="enable_wakelock" translatable="false">Take WakeLock</string>
    <string name="disable_wakelock" translatable="false">Drop WakeLock</string>
    <string name="enable_wifilock" translatable="false">Take WifiLock</string>
    <string name="disable_wifilock" translatable="false">Drop WifiLock</string>
    <string name="edit_text" translatable="false">Edit text</string>
    <string name="select_text" translatable="false">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="paste">Paste</string>
    <string name="service_notify_text" translatable="false">Terminal session is running</string>
    <string name="screen_preferences" translatable="false">Screen</string>
    <string name="title_statusbar_preference" translatable="false">Status bar</string>
    <string name="summary_statusbar_preference" translatable="false">Show/hide status bar.</string>
    <string name="dialog_title_statusbar_preference" translatable="false">Status bar</string>
    <string name="title_cursorstyle_preference" translatable="false">Cursor style</string>
    <string name="summary_cursorstyle_preference" translatable="false">Choose cursor style.</string>
    <string name="dialog_title_cursorstyle_preference" translatable="false">Cursor style</string>
    <string name="title_cursorblink_preference" translatable="false">Cursor blink</string>
    <string name="summary_cursorblink_preference" translatable="false">Choose cursor blink.</string>
    <string name="dialog_title_cursorblink_preference" translatable="false">Cursor blink</string>
    <string name="text_preferences" translatable="false">Text</string>
    <string name="title_fontsize_preference" translatable="false">Font size</string>
    <string name="summary_fontsize_preference" translatable="false">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference" translatable="false">Font size</string>
    <string name="title_color_preference" translatable="false">Colors</string>
    <string name="summary_color_preference" translatable="false">Choose text color.</string>
    <string name="dialog_title_color_preference" translatable="false">Text color</string>
    <string name="keyboard_preferences" translatable="false">Keyboard</string>
    <string name="title_controlkey_preference" translatable="false">Control key</string>
    <string name="summary_controlkey_preference" translatable="false">Choose control key.</string>
    <string name="dialog_title_controlkey_preference" translatable="false">Control key</string>
    <string name="title_fnkey_preference" translatable="false">Fn key</string>
    <string name="summary_fnkey_preference" translatable="false">Choose Fn key.</string>
    <string name="dialog_title_fnkey_preference" translatable="false">Fn key</string>
    <string name="title_ime_preference" translatable="false">Input method</string>
    <string name="summary_ime_preference" translatable="false">Choose input method for soft keyboard.</string>
    <string name="dialog_title_ime_preference" translatable="false">Input method</string>
    <string name="shell_preferences" translatable="false">Shell</string>
    <string name="title_shell_preference" translatable="false">Command line</string>
    <string name="summary_shell_preference" translatable="false">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference" translatable="false">Shell</string>
    <string name="title_initialcommand_preference" translatable="false">Initial command</string>
    <string name="summary_initialcommand_preference" translatable="false">Sent to the shell when it starts.</string>
    <string name="dialog_title_initialcommand_preference" translatable="false">Initial Command</string>
    <string name="default_value_statusbar_preference" translatable="false">1</string>
    <string name="default_value_cursorstyle_preference" translatable="false">0</string>
    <string name="default_value_cursorblink_preference" translatable="false">0</string>
    <string name="default_value_fontsize_preference" translatable="false">12</string>
    <string name="default_value_color_preference" translatable="false">1</string>
    <string name="default_value_controlkey_preference" translatable="false">7</string>
    <string name="default_value_fnkey_preference" translatable="false">7</string>
    <string name="default_value_ime_preference" translatable="false">0</string>
    <string name="default_value_shell_preference" translatable="false">/system/bin/sh -</string>
    <string name="default_value_initialcommand_preference" translatable="false">export HOME=/data/data/com.duy.compiler.javanide/files;cd $HOME</string>
    <string name="control_key_dialog_title" translatable="false">Control and Function Keys</string>
    <string name="control_key_dialog_control_text" translatable="false">CTRLKEY Space : Control-@ (NUL)\nCTRLKEY A..Z : Control-A..Z\nCTRLKEY 5 : Control-]\nCTRLKEY 6 : Control-^\nCTRLKEY 7 : Control-_\nCTRLKEY 9 : F11\nCTRLKEY 0 : F12</string>
    <string name="control_key_dialog_control_disabled_text" translatable="false">No control key set.</string>
    <string name="control_key_dialog_fn_text" translatable="false">FNKEY 1..9 : F1-F9\nFNKEY 0 : F10\nFNKEY W : Up\nFNKEY A : Left\nFNKEY S : Down\nFNKEY D : Right\nFNKEY P : PageUp\nFNKEY N : PageDown\nFNKEY T : Tab\nFNKEY L : | (pipe)\nFNKEY U : _ (underscore)\nFNKEY E : Control-[ (ESC)\nFNKEY X : Delete\nFNKEY I : Insert\nFNKEY H : Home\nFNKEY F : End\nFNKEY . : Control-\\\n</string>
    <string name="control_key_dialog_fn_disabled_text" translatable="false">No function key set.</string>
    <string name="save">Save</string>
    <string name="new_file">Create new file</string>
    <string name="language">Language</string>
    <string name="run">Run</string>
    <string name="rate">Rate app</string>
    <string name="more_app">More apps</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="code_editor">Code editor</string>
    <string name="word_wrap">Wrap content</string>
    <string name="font_z">Font size</string>
    <string name="user_interface">User interface</string>
    <string name="show_line">Show line numbers</string>
    <string name="find">Find</string>
    <string name="find_replace">Find and replace</string>
    <string name="tool">Tool</string>
    <string name="goto_line">Go to line</string>
    <string name="format_code">Format code</string>
    <string name="information">Information</string>
    <string name="report_bug">Report bug</string>
    <string name="word_wrap_desc">Automatic screen down the line when overflow</string>
    <string name="show_line_desc">Display line numbers on the left side of the code editor</string>
    <string name="hide_status_bar">Hide status bar</string>
    <string name="hide_status_bar_desc">Hide the status bar in every screen of the app, including console. Restart the app to apply.</string>
    <string name="show_suggest_popup">Hint popup</string>
    <string name="show_hint_desc">Show suggestions while typing</string>
    <string name="file">File</string>
    <string name="show_key_board">Show keyboard</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="setting_editor">Editor settings</string>
    <string name="theme">Code style</string>
    <string name="back_to_undo">Press back to undo</string>
    <string name="more_feature">Open drawer</string>
    <string name="rerun">Rerun current program</string>
    <string name="console_screen">Console</string>
    <string name="auto_compile_summary">Automatically compile while typing. While the performance of this application will be decreased when using this feature, errors will be reported much sooner.</string>
    <string name="auto_compile">Auto compile</string>
    <string name="program_structure">Show program structure</string>
    <string name="show_symbol">List symbols</string>
    <string name="show_symbol_decs">Show list symbol below the editor.</string>
    <string name="add_watch">Add watch</string>
    <string name="max_page_desc">Number of maximum page display on the screen</string>
    <string name="max_page">Max page editor</string>
    <string name="max_history_edit">Max history steps</string>
    <string name="max_history_edit_desc">The maximum number of steps can be undo redo</string>
    <string name="stack_size_desc">Maximum stack size when running the program. On some devices, this parameter has no effect. The default is 40000. Minimum is 5000</string>
    <string name="stack_size">Stack size</string>
    <string name="theme_font">Code theme and font</string>
    <string name="enable_ime_keyboard">Enable IME keyboard</string>
    <string name="key_ime_keyboard" translatable="false">key_ime_keyboard</string>
    <string name="step_info">Step info</string>
    <string name="step_over">Step over</string>
    <string name="notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="keyboard">Keyboard</string>
    <string name="text_color">Text Color</string>
    <string name="default_text_color">Default text color</string>
    <string name="def_bg_color">Default background color</string>
    <string name="bg_color">Background Color</string>
    <string name="draw_screen_faster">Draw screen faster</string>
    <string name="ctrl_key">Ctrl Key</string>
    <string name="compiler">Compiler</string>
    <string name="ime_desc">Allows your keyboard to show hints.</string>
    <string name="tab_width">Tab width (space)</string>
    <string name="anti_alias_summary">Smooths out jagged graphics</string>
    <string name="anti_alias">Anti-alias</string>
    <string name="hardware_acceleration">Hardware acceleration</string>
    <string name="console_font_size">Console font size</string>
    <string name="donate">Donate</string>
    <string name="setting_console" translatable="false">Console settings</string>
    <string name="new_class" translatable="false">Create new class</string>
    <string name="run_configuration">Run configuration</string>
    <string name="sample_code_java">Java sample code</string>
    <string name="compiler_setting">Compiler setting</string>
</resources>