<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_run"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/run"
        app:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_folder_white_24dp"
        android:title="@string/file"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_new_project"
                android:icon="@drawable/ic_fiber_new_white_24dp"
                android:title="@string/new_project"/>
            <item
                android:id="@+id/action_new_class"
                android:icon="@drawable/ic_fiber_new_white_24dp"
                android:title="@string/new_class"/>
            <item
                android:id="@+id/action_new_file"
                android:visible="false"
                android:icon="@drawable/ic_fiber_new_white_24dp"
                android:title="@string/new_file"/>
            <item
                android:id="@+id/action_open_project"
                android:enabled="false"
                android:icon="@drawable/ic_folder_open_white_24dp"
                android:title="@string/open_project"/>
            <item
                android:id="@+id/action_save"
                android:icon="@drawable/ic_save_white_24dp"
                android:title="@string/save"/>

        </menu>
    </item>
    <item
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_undo"
                android:icon="@drawable/ic_undo_white_24dp"
                android:title="@string/undo"/>
            <item
                android:id="@+id/action_redo"
                android:icon="@drawable/ic_redo_white_24dp"
                android:title="@string/redo"/>

            <item
                android:id="@+id/action_paste"
                android:icon="@drawable/ic_content_paste_white_24dp"
                android:title="@string/paste"/>
            <item
                android:id="@+id/action_copy_all"
                android:icon="@drawable/ic_content_copy_white_24dp"
                android:title="@string/copy_all"/>
        </menu>
    </item>


    <item
        android:icon="@drawable/ic_build_white_24dp"
        android:title="@string/tool"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_find"
                android:icon="@drawable/ic_search_white_24dp"
                android:title="@string/find"/>

            <item
                android:id="@+id/action_find_and_replace"
                android:icon="@drawable/ic_find_replace_white_24dp"
                android:title="@string/find_replace"/>
            <item
                android:id="@+id/action_goto_line"
                android:icon="@drawable/ic_format_list_numbered_white_24dp"
                android:title="@string/goto_line"/>

            <item
                android:id="@+id/action_format"
                android:icon="@drawable/ic_format_indent_increase_white_24dp"
                android:title="@string/format_code"/>
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/setting_editor"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_edit_word_wrap"
                android:checkable="true"
                android:icon="@drawable/ic_wrap_text_white_24dp"
                android:title="@string/word_wrap"/>
            <item
                android:id="@+id/action_show_symbol"
                android:checkable="true"
                android:icon="@drawable/ic_apps_white_24dp"
                android:title="@string/show_symbol"/>
            <item
                android:id="@+id/action_show_line"
                android:checkable="true"
                android:icon="@drawable/ic_format_list_numbered_white_24dp"
                android:title="@string/show_line"/>
            <item
                android:id="@+id/action_show_popup"
                android:checkable="true"
                android:icon="@drawable/ic_chat_bubble_outline_white_24dp"
                android:title="@string/show_suggest_popup"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_edit_run"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/run_configuration" />

    <item
        android:id="@+id/action_more_feature"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/more_feature"
        app:showAsAction="ifRoom"/>

</menu>