<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="@string/code_editor">
        <menu>
            <item
                android:visible="false"
                android:id="@+id/action_select_theme"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="@string/theme_font"/>

            <item
                android:id="@+id/action_setting"
                android:enabled="true"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/setting_editor"/>
            <item
                android:id="@+id/action_setting_console"
                android:enabled="true"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/setting_console"/>
        </menu>
    </item>


    <item android:title="@string/information">

        <menu>
            <item
                android:id="@+id/action_donate"
                android:icon="@drawable/ic_donate_white"
                android:title="@string/donate"
                android:visible="false"/>
            <item
                android:id="@+id/action_report_bug"
                android:icon="@drawable/ic_bug_report_white_24dp"
                android:title="@string/report_bug"/>

            <item
                android:id="@+id/action_install"
                android:icon="@drawable/ic_system_update_white_24dp"
                android:title="System info"/>
            <item
                android:id="@+id/action_info"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/information"
                android:visible="false"/>

            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_stars_white_18dp"
                android:title="@string/rate"
                android:visible="false"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_more_app"
                android:icon="@drawable/ic_play_store"
                android:title="@string/more_app"
                android:visible="false"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>