<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rerun"
        android:icon="@drawable/ic_replay_white_24dp"
        android:title="@string/rerun"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_watch"
        android:icon="@drawable/fab_add"
        android:title="@string/add_watch"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_step_over"
        android:icon="@drawable/ic_fast_forward_white_24dp"
        android:title="@string/step_over"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_step_info"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/step_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_program_structure"
        android:icon="@drawable/ic_format_list_bulleted_white_24dp"
        android:title="@string/program_structure"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_soft"
        android:icon="@drawable/ic_keyboard_white_24dp"
        android:title="@string/show_key_board"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>